# water

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  index.html  main.js  main.py  pyproject.toml  requirements.txt  style.css
.github/workflows/: static.yml
app/: app.py
app/static/: defaults.js  index.html  main.js  starters.js  style.css
app/templates/: index.html
graph/: README.md  base.Dockerfile  fly.toml  prod.Dockerfile
static/: Dockerfile  fly.toml  index.html  main.js  style.css
